<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.axway.apigw</groupId>
  <artifactId>filter-devkit-plugins</artifactId>
  <version>0</version>
  <packaging>pom</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>${project.groupId}</groupId>
      <artifactId>filter-deps-runtime</artifactId>
      <version>[7.7.0,)</version>
      <type>pom</type>
    </dependency>
    <dependency>
      <groupId>${project.groupId}</groupId>
      <artifactId>filter-devkit-runtime</artifactId>
      <version>0</version>
      <exclusions>
        <exclusion>
          <groupId>${project.groupId}</groupId>
          <artifactId>filter-deps-runtime</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
  </dependencies>
  <modules>
  	<module>filter-devkit-plugins-lambda</module>
  	<module>filter-devkit-plugins-httpsig</module>
  	<module>filter-devkit-plugins-jose</module>
  	<module>filter-devkit-plugins-oauth</module>
  </modules>
</project>
